# auth/src/database/repository/@types/user-repository.type.ts
@@ -1,13 +1,0 @@
-export interface UserCreateRepository {
-  username: string;
-  email: string;
-  password?: string;
-  googleId?: string;
-}
-
-export interface UserUpdateRepository {
-  username?: string;
-  googleId?: string;
-  password?: string;
-  phone?: string;
-}
